--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -22,3 +22,15 @@ Move forward about a year and it became clear that what I really needed to provi
 To me this means providing a way to build utility OS's that allow anyone to create their own utility and publish it with in their own infrastructure. For example, I might create a web server utility based on Fedora 9, write some code (extending BULOS API that controls it) and push it off somewhere. It will boot into about 200mb of ram, and away I go.
 
 Sound simple? It is, and in my humble opinion that's exactly what utility computing should be about, simplicity.
+
+One other thing I should explain (because i've been asked before) is why I base off known distributions. When people thing distribution and look at what I'm doing they think "there is no way your going to boot a distribution (even running some small piece of software) efficiently", and this true. But that's not why we're using a distribution, we're not installing anything at all in fact. What we are doing is using the distribution packages as a source of software, we ignore dependencies because in alot of cases they're irrelevant to the service itself (i.e. if you want samba, fedora may install a multitude of packages that revolve around documentation and management that have no consequence for us, thus we dont install them.
+
+But the main reason we use distributions is because they are kept up to date, we dont have to create our own binaries and ship them because they're already provided by someone else and that is no small thing. I dont want to reinvent the distribution wheel.
+
+What this also means is that we need a way of distributing our "utility" and it's important to take into account the GPL in this calculation. The GPL says that if you provide someone a binary application that is distributed under the GPL, the YOU are responsible for providing the corresponding source for it. This is why our "exported" repository of utility OS's will contain only a list of packages, the "cleanup" list and the control code (written in PHP) so that when you distribute your utility OS, your not providing a binary copy of the "kernel" package from fedora (for instance). All you are saying is "this utility uses the kernel package form fedora, go get it yourself".
+
+Keep in mind, that also means that if your "utility" requires some binary package that's GPL and not provided by the original distribution, we must (be able to if asked) provide the source. This is is quite easy, we just add a "custom" package to our project (that contains both binary and source) and get it to install the source into /usr/share/doc or /usr/src (somewhere appropriate), that way when the utility OS is built, it'll get cleaned out by the builder and not waste valuable RAM. If the utility is downloaded by someone else, then any custom packages are contained (in entirety) within the export and so the source code is provided along with the binary and we automatically fulfil our obligations under the GPL.
+
+How does this affect people using the utility? Well, if you were to use a utility to provide file sharing (cifs for example) to users on your network your not required to provide the source code for that software, your not distributing samba to them, your providing them a service (much the same as you would if you installed a linux machine and let them have access to it). In reality the utility may be based off fedora and so getting the source is easy enough, but not a requirement in that instance under the GPL (as I understand it).
+
+All this means that a "utility" OS may only be in the order of kilobytes rather then megabytes or gigabytes, and that makes distribution EASY!
