--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -25,7 +25,7 @@ Sound simple? It is, and in my humble opinion that's exactly what utility comput
 
 One other thing I should explain (because i've been asked before) is why I base off known distributions. When people thing distribution and look at what I'm doing they think "there is no way your going to boot a distribution (even running some small piece of software) efficiently", and this true. But that's not why we're using a distribution, we're not installing anything at all in fact. What we are doing is using the distribution packages as a source of software, we ignore dependencies because in alot of cases they're irrelevant to the service itself (i.e. if you want samba, fedora may install a multitude of packages that revolve around documentation and management that have no consequence for us, thus we dont install them.
 
-But the main reason we use distributions is because they are kept up to date, we dont have to create our own binaries and ship them because they're already provided by someone else and that is no small thing. I dont want to reinvent the distribution wheel.
+But the main reason we use distributions is because they are kept up to date, we dont have to create our own binaries and ship them because they're already provided by someone else and that is no small thing. I dont want to reinvent the distribution wheel, not when its already being provided by hundreds of people in the form of redhat, centos, fedora, ubuntu, slackare, arch linux, etc. They do it a million times more efficiently then I can or will, but at the end of the day, theres just no value in it (at this point) for us.
 
 What this also means is that we need a way of distributing our "utility" and it's important to take into account the GPL in this calculation. The GPL says that if you provide someone a binary application that is distributed under the GPL, the YOU are responsible for providing the corresponding source for it. This is why our "exported" repository of utility OS's will contain only a list of packages, the "cleanup" list and the control code (written in PHP) so that when you distribute your utility OS, your not providing a binary copy of the "kernel" package from fedora (for instance). All you are saying is "this utility uses the kernel package form fedora, go get it yourself".
 
