Edited wiki page through web user interface.

--- a/wiki/Introduction.wiki
+++ b/wiki/Introduction.wiki
@@ -27,7 +27,7 @@ One other thing I should explain (because i've been asked before) is why I base 
 
 But the main reason we use distributions is because they are kept up to date, we dont have to create our own binaries and ship them because they're already provided by someone else and that is no small thing. I dont want to reinvent the distribution wheel, not when its already being provided by hundreds of people in the form of redhat, centos, fedora, ubuntu, slackare, arch linux, etc. They do it a million times more efficiently then I can or will, but at the end of the day, theres just no value in it (at this point) for us.
 
-What this also means is that we need a way of distributing our "utility" and it's important to take into account the GPL in this calculation. The GPL says that if you provide someone a binary application that is distributed under the GPL, then YOU are responsible for providing the corresponding source for it (think about that very hard, if you gave someone an fedora rpm they have the right to ask YOU for the source to it, you cant say "go get it from fedora", that does not cut it). This is why our "exported" repository of utility OS's will contain only a list of packages, the "cleanup" list and the control code (written in PHP) so that when you distribute your utility OS, your not providing a binary copy of the "kernel" package from fedora (for instance). All you are saying is "this utility uses the kernel package form fedora, go get it yourself".
+What this also means is that we need a way of distributing our "utility" and it's important to take into account the GPL in this calculation. The GPL says that if you provide someone a binary application that is distributed under the GPL, then YOU are responsible for providing the corresponding source for it (think about that very hard, if you gave someone a fedora rpm they have the right to ask YOU for the source to it, you cant say "go get it from fedora", that does not cut it). This is why our "exported" repository of utility OS's will contain only a list of packages, the "cleanup" list and the control code (written in PHP) so that when you distribute your utility OS, your not providing a binary copy of the "kernel" package from fedora (for instance). All you are saying is "this utility uses the kernel package form fedora, go get it yourself". BULOS will in fact get it for you, but the person who wrote that utility is not responsible for providing you with a copy of the source for "kernel".
 
 Keep in mind, that also means that if your "utility" requires some binary package that's GPL and not provided by the original distribution, we must (be able to if asked) provide the source. This is is quite easy, we just add a "custom" package to our project (that contains both binary and source) and get it to install the source into /usr/share/doc or /usr/src (somewhere appropriate), that way when the utility OS is built, it'll get cleaned out by the builder and not waste valuable RAM. If the utility is downloaded by someone else, then any custom packages are contained (in entirety) within the export and so the source code is provided along with the binary and we automatically fulfil our obligations under the GPL.
 
